(bug) Tooltip overflow

--- a/src/app/modules/forms/register/register.scss
+++ b/src/app/modules/forms/register/register.scss
@@ -50,6 +50,10 @@ minds-form-register{
 
   }
 
+  .m-login-box > div {
+    overflow: visible;
+  }
+
   .tooltip-wrapper {
     bottom: 14px;
     position: absolute;
